python-algo/errorFile129-02-2020-15-09-23-1583006963378--715870662.txt
  File "/home/archen/terminal-ai/python-algo/algo_strategy.py", line 113
    if(!enemy_change){
       ^
SyntaxError: invalid syntax
